Building now works and produces nice jars and execs :+1: